<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="background_task.network_error">A network error occurred. Please check the server address or try again later.</string>
    <string name="background_task.unsupported_api">Server API v%1$s does not support this function.</string>
    <string name="background_task.no_network">This program requires network access. Please turn on Wi-Fi or mobile network.</string>
    <string name="background_task.not_found">Resource not found. Please check the server address.</string>
    <string name="background_task.parse_error">Didn\'t understand the reply. Please check the server address.</string>
    <string name="background_task.ssl_cert_error">HTTPS certificate error: %1$s.</string>
    <string name="background_task.ssl_error">SSL connection exception. Please check server certificate.</string>
    <string name="main.songs">Songs</string>
    <string name="main.sets">Sets</string>
    <string name="main_recently_played">Recently Played</string>
    <string name="filter.recent">Recent</string>
    <string name="filter.favorites">Favorites</string>
    <string name="filter.new">New</string>
    <string name="filter.genres">Genres</string>
    <string name="filter.playlists">Playlists</string>
    <string name="button_bar.bookmarks">Bookmarks</string>
    <string name="button_bar.browse">Media Library</string>
    <string name="button_bar.chat">Chat</string>
    <string name="button_bar.now_playing">Now Playing</string>
    <string name="buttons.play">Play</string>
    <string name="buttons.pause">Pause</string>
    <string name="buttons.repeat">Repeat</string>
    <string name="buttons.shuffle">Shuffle</string>
    <string name="buttons.stop">Stop</string>
    <string name="buttons.next">Next</string>
    <string name="buttons.previous">Previous</string>
    <string name="podcasts.label">Podcast</string>
    <string name="podcasts_channels.empty">No podcasts channels registered</string>
    <string name="button_bar.podcasts">Podcast</string>
    <string name="button_bar.search">Search</string>
    <string name="chat.send_a_message">Send a message</string>
    <string name="chat.send_button">Send</string>
    <string name="chat.user_avatar">Avatar image</string>
    <string name="common.album">Album</string>
    <string name="common.artist">Artist</string>
    <string name="common.cancel">Cancel</string>
    <string name="common.comment">Comment</string>
    <string name="common.confirm">Confirm</string>
    <string name="common.delete">Delete</string>
    <string name="common.download">Download</string>
    <string name="common.info">Details</string>
    <string name="common.multiple_genres">Multiple Genres</string>
    <string name="common.name">Name</string>
    <string name="common.ok">OK</string>
    <string name="common.pin">Pin</string>
    <string name="common.play_last">Play Last</string>
    <string name="common.play_next">Play Next</string>
    <string name="common.play_now">Play Now</string>
    <string name="common.play_shuffled">Play Shuffled</string>
    <string name="common.public">Public</string>
    <string name="common.save">Save</string>
    <string name="common.select_all">Select all</string>
    <string name="common.title">Title</string>
    <string name="common.unpin">Unpin</string>
    <string name="common.delete_selection_confirmation">Do you really want to delete the current selection?</string>
    <string name="common.unpin_selection_confirmation">Do you really want to unpin the current selection?</string>
    <string name="common.various_artists">Various Artists</string>
    <string name="delete_playlist">Do you want to delete %1$s</string>
    <string name="download.bookmark_removed" formatted="false">Bookmark removed.</string>
    <string name="download.bookmark_set_at_position" formatted="false">Bookmark set at %s.</string>
    <string name="download.empty">Nothing is downloading</string>
    <string name="playlist.empty">Playlist is empty</string>
    <string name="download.jukebox_not_authorized">Remote control is not allowed. Please enable jukebox mode in <b>Users &gt; Settings</b> on your Subsonic server.</string>
    <string name="download.jukebox_off">Turned off remote control. Music is played on phone.</string>
    <string name="download.jukebox_offline">Remote control is not available in offline mode.</string>
    <string name="download.jukebox_on">Turned on remote control. Music is played on server.</string>
    <string name="download.jukebox_server_too_old">Remote control is not supported. Please upgrade your Subsonic server.</string>
    <string name="download.menu_equalizer">Equalizer</string>
    <string name="download.menu_jukebox_off">Jukebox Off</string>
    <string name="download.menu_jukebox_on">Jukebox On</string>
    <string name="download.menu_lyrics">Lyrics</string>
    <string name="download.menu_save">Save Playlist</string>
    <string name="download.menu_screen_off">Screen Off</string>
    <string name="download.menu_screen_on">Screen On</string>
    <string name="download.menu_show_album">Go to Album</string>
    <string name="download.menu_show_metadata">Show metadata</string>
    <string name="download.menu_refresh_track">Refresh Track</string>
    <string name="download.menu_export_to_media_device">Export to Media Device</string>
    <string name="download.menu_shuffle">Shuffle</string>
    <string name="download.menu_shuffle_on">Shuffle mode enabled</string>
    <string name="download.menu_shuffle_off">Shuffle mode disabled</string>
    <string name="download.playerstate_loading">Buffering …</string>
    <string name="download.playerstate_playing_shuffle">Playing shuffle</string>
    <string name="download.playlist_done">Playlist saved.</string>
    <string name="download.playlist_error">Failed to save playlist, please try later.</string>
    <string name="download.playlist_name">Enter the playlist name:</string>
    <string name="download.playlist_saving">Saving playlist \"%s\"…</string>
    <string name="download.playlist_title">Save Playlist</string>
    <string name="download.repeat_all">Repeat All</string>
    <string name="download.repeat_off">Repeat Off</string>
    <string name="download.repeat_single">Repeat Song</string>
    <string name="equalizer.enabled">Enabled</string>
    <string name="equalizer.label">Equalizer</string>
    <string name="equalizer.preset">Select Preset</string>
    <string name="error.label">Error</string>
    <string name="jukebox.is_default">Jukebox By Default</string>
    <string name="lyrics.nomatch">No lyrics found</string>
    <string name="metadata.label">Metadata</string>
    <string name="meta_title">Title: %1$s</string>
    <string name="meta_artist">Artist: %1$s</string>
    <string name="meta_album">Album: %1$s</string>
    <string name="meta_year">Year: %1$s</string>
    <string name="meta_genre">Genre: %1$s</string>
    <string name="meta_track">Track: %1$s</string>
    <string name="meta_duration">Duration: %1$s</string>
    <string name="meta_bitrate">Bitrate: %1$s kbps</string>
    <string name="meta_path">Path: %1$s</string>
    <string name="export.clear_dialog_title">Clear device?</string>
    <string name="export.clear_dialog_message">Do you want to clear the destination folder before exporting?</string>
    <string name="export.success">Export successful</string>
    <string name="export.failed">Export failed: %s</string>
    <string name="export.progress">Exporting %1$d/%2$d: %3$s</string>
    <string name="language.default">System default</string>
    <string name="language.zh_CN">Chinese (China)</string>
    <string name="language.zh_TW">Chinese (Taiwan)</string>
    <string name="language.cs">Czech</string>
    <string name="language.nl">Dutch</string>
    <string name="language.en">English</string>
    <string name="language.fr">French</string>
    <string name="language.de">German</string>
    <string name="language.hu">Hungarian</string>
    <string name="language.it">Italian</string>
    <string name="language.es">Spanish</string>
    <string name="language.pl">Polish</string>
    <string name="language.pt">Portuguese</string>
    <string name="language.pt_BR">Portuguese (Brazil)</string>
    <string name="language.ru">Russian</string>
    <string name="main.albums_alphaByArtist">By Artist</string>
    <string name="main.albums_alphaByName">By Name</string>
    <string name="main.albums_frequent">Most Played</string>
    <string name="main.albums_highest">Top Rated</string>
    <string name="main.albums_newest">Recently Added</string>
    <string name="main.albums_random">Random</string>
    <string name="main.albums_recent">Recently Played</string>
    <string name="main.albums_starred">Starred</string>
    <string name="main.albums_by_year">Chronological</string>
    <string name="main.albums_released">Recent Released</string>
    <string name="main.albums_title">Albums</string>
    <string name="main.artists_title">Artists</string>
    <string name="main.genres_title">Genres</string>
    <string name="main.library_title">Library</string>
    <string name="main.last_played_genres">Last played genres</string>
    <string name="main.moods_title">Moods</string>
    <string name="main.years_title">Years</string>
    <string name="main.title_all_songs">All (songs)</string>
    <string name="main.title_all_livesets">All (livesets)</string>
    <string name="main.title_songs_this_year">This year (songs)</string>
    <string name="main.title_songs_last_year">Last year (songs)</string>
    <string name="main.title_livesets_this_year">This Year (livesets)</string>
    <string name="main.title_livesets_last_year">Last Year (livesets)</string>
    <string name="main.landing_page_title">Home</string>
    <string name="main.livesets">livesets</string>
    <string name="main.offline">Offline</string>
    <string name="server_switched_offline">Server unreachable. Switched to offline mode.</string>
    <string name="server_switched_online">Server reachable. Online mode restored.</string>
    <string name="main.setup_server">%s - Set up Server</string>
    <string name="main.songs_random">Random</string>
    <string name="main.songs_random_this_year">Random (2025)</string>
    <string name="main.songs_recent">Recent</string>
    <string name="main.livesets_recent">Recent Live sets</string>
    <string name="main.songs_recent_added">Recent Added</string>
    <string name="main.songs_recent_modified">Recent Modified</string>
    <string name="main.songs_starred">Starred</string>
    <string name="main.songs_title">Songs</string>
    <string name="main.livesets_title">Livesets</string>
    <string name="main.videos">Videos</string>
    <string name="do_not_show_dialog_again">Do not show dialog again</string>
    <string name="share_on_server">Create share on the server</string>
    <string name="save_as_defaults">Save as default</string>
    <string name="share_comment">Comment</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="festival">Festival</string>
    <string name="label">Label</string>
    <string name="sort_method">Sort method</string>
    <string name="save_preset">Save preset</string>
    <string name="close">close</string>
    <string name="tile_title">title</string>
    <string name="tile_title_hint">Hardstyle by Teun</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="filters_title">Filters</string>
    <string name="result_count">Result count</string>
    <string name="welcome_login_info">What is your login information?</string>
    <string name="welcome_username">Name</string>
    <string name="welcome_password">Password</string>
</resources>